[package]
authors = ["Alejandro Gaviria <mr.gaviria@gmail.com>"]
license = "MIT"
name = "tuxedo"
version = "0.1.0"

[[bin]]
name = "task"
path = "src/main.rs"

[dependencies]
futures = "0.1.9"
mysql_async = "0.5.0"
rustc-serialize = "0.3.22"
tokio-core = "0.1.4"
toml = "0.2.1"

[dependencies.clap]
features = ["suggestions", "color"]
version = "2.20.0"
